handle both "install" and "update" composer hooks

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     }
   },
   "scripts": {
+    "post-install-cmd": "Hook\\Composer::postInstall",
     "post-update-cmd": "Hook\\Composer::postUpdate"
   }
 }
